solved the small screen direction invisibilty bug

--- a/style.css
+++ b/style.css
@@ -186,13 +186,6 @@ body {
 }
 
 @media(max-width: 1450px) {
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
   .title {
     padding-top: 3rem;
   }
